--- a/README.me
+++ b/README.me
@@ -11,5 +11,5 @@ This project demonstrates how to monitor a Python web app deployed on Kubernetes
 
 1. Deploy the Python app:
 ```bash
-kubectl apply -f k8s/
-
+kubectl apply -f k8s
+kubectl apply -f monitoring
